--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,8 @@
 {
+	"autoload": {
+		"files": ["inc.functions.php"]
+	},
     "require": {
-        "rdx/db": "^1.1"
+        "rdx/db": "^1.6"
     }
 }
